--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,9 @@
 OPENAI_API_KEY="YOUR_API_KEY"
+
+# Required for agent example
 SERPAPI_API_KEY="YOUR_API_KEY"
+
+# Required for retrieval examples
 SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
 SUPABASE_URL="YOUR_SUPABASE_URL"
 
