Update README with more screenshots

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,6 @@ SUPABASE_URL="YOUR_SUPABASE_URL"
 # LANGCHAIN_TRACING_V2=true
 # LANGCHAIN_API_KEY=YOUR_API_KEY
 # LANGCHAIN_PROJECT=nextjs-starter
+
+# Optional: Other model keys
+# ANTHROPIC_API_KEY="YOUR_API_KEY"
