Adds more use cases

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,9 @@
 OPENAI_API_KEY="YOUR_API_KEY"
 SERPAPI_API_KEY="YOUR_API_KEY"
+SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
+SUPABASE_URL="YOUR_SUPABASE_URL"
+
+# Optional: For Tracing with LangSmith
+# LANGCHAIN_TRACING_V2=true
+# LANGCHAIN_API_KEY=YOUR_API_KEY
+# LANGCHAIN_PROJECT=nextjs-starter
