--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 OPENAI_API_KEY="YOUR_API_KEY"
 
 # Required for agent example
-SERPAPI_API_KEY="YOUR_API_KEY"
+# SERPAPI_API_KEY="YOUR_API_KEY"
 
 # Required for retrieval examples
-SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
-SUPABASE_URL="YOUR_SUPABASE_URL"
+# SUPABASE_PRIVATE_KEY="YOUR_SUPABASE_PRIVATE_KEY"
+# SUPABASE_URL="YOUR_SUPABASE_URL"
 
 # Optional: For Tracing with LangSmith
 # LANGCHAIN_TRACING_V2=true
