--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -21,7 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.0.143",
+    "langchain": "^0.0.146",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
