--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY="YOUR_API_KEY"
+LANGCHAIN_CALLBACKS_BACKGROUND=false
 
 # Required for agent example
 # SERPAPI_API_KEY="YOUR_API_KEY"
