--- a/.env.local.example
+++ b/.env.local.example
@@ -14,3 +14,6 @@ SUPABASE_URL="YOUR_SUPABASE_URL"
 
 # Optional: Other model keys
 # ANTHROPIC_API_KEY="YOUR_API_KEY"
+
+# Turn on demo mode
+# NEXT_PUBLIC_DEMO="true"
