--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.0.208",
+    "langchain": "^0.0.209",
     "next": "14.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -33,10 +33,18 @@
     "zod": "^3.22.3",
     "zod-to-json-schema": "^3.21.4"
   },
-  "resolutions": {
-    "@langchain/core": "0.1.1"
-  },
   "devDependencies": {
     "prettier": "3.0.0"
+  },
+  "resolutions": {
+    "@langchain/core": "0.1.2"
+  },
+  "overrides": {
+    "@langchain/core": "0.1.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/core": "0.1.2"
+    }
   }
 }
