Adds structured output use case, intermediate steps for agents, new screenshots, docs

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "prettier": "3.0.0"
