--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.0.205",
+    "langchain": "^0.0.208",
     "next": "14.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -32,6 +32,9 @@
     "typescript": "5.1.6",
     "zod": "^3.22.3",
     "zod-to-json-schema": "^3.21.4"
+  },
+  "resolutions": {
+    "@langchain/core": "0.1.1"
   },
   "devDependencies": {
     "prettier": "3.0.0"
