--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "engines": {
     "node": ">=18"
   },
+  "packageManager": "yarn@3.4.1",
   "dependencies": {
     "@langchain/community": "^0.2.0",
     "@langchain/openai": "^0.0.33",
