--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "packageManager": "yarn@3.4.1",
   "dependencies": {
     "@langchain/community": "^0.2.0",
+    "@langchain/core": "^0.2.0",
     "@langchain/openai": "^0.0.33",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
