--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@langchain/community": "^0.2.4",
-    "@langchain/core": "^0.2.5",
-    "@langchain/openai": "^0.1.0",
+    "@langchain/community": "^0.2.19",
+    "@langchain/core": "^0.2.16",
+    "@langchain/langgraph": "^0.0.27",
+    "@langchain/openai": "^0.2.2",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.12.12",
@@ -25,7 +26,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.2.4",
+    "langchain": "^0.2.10",
     "next": "^14.2.3",
     "postcss": "8.4.27",
     "react": "^18.3.1",
@@ -40,14 +41,15 @@
     "prettier": "3.0.0"
   },
   "resolutions": {
-    "@langchain/core": "0.2.5"
+    "@langchain/core": "0.2.16"
   },
   "overrides": {
-    "@langchain/core": "0.2.5"
+    "@langchain/core": "0.2.16"
   },
   "pnpm": {
     "overrides": {
-      "@langchain/core": "0.2.5"
+      "@langchain/core": "0.2.16"
     }
-  }
+  },
+  "packageManager": "yarn@3.5.1"
 }
