--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "langchain-nextjs-template",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "yarn@3.5.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,32 +14,44 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.11",
-    "@langchain/core": "^0.3.17",
-    "@langchain/langgraph": "^0.2.20",
-    "@langchain/openai": "^0.3.11",
-    "@next/bundle-analyzer": "^13.4.19",
+    "@langchain/community": "^0.3.25",
+    "@langchain/core": "^0.3.31",
+    "@langchain/langgraph": "^0.2.41",
+    "@langchain/openai": "^0.3.17",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "ai": "^3.1.12",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "langchain": "^0.3.5",
-    "next": "^14.2.3",
-    "postcss": "8.4.27",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "langchain": "^0.3.11",
+    "lucide-react": "^0.473.0",
+    "next": "^15.1.5",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zod": "^3.22.3",
-    "zod-to-json-schema": "^3.21.4"
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.0.44",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1"
   },
   "devDependencies": {
-    "prettier": "3.0.0"
-  },
-  "packageManager": "yarn@3.5.1"
+    "@next/bundle-analyzer": "^13.4.19",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "8.4.27",
+    "prettier": "^3.4.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
+  }
 }
